fixing alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-/* Section 01 Style */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+                                  /* Section 01 Style */
 
 .banner {
     background: linear-gradient(180deg, #070211, #07021100),
@@ -19,7 +25,6 @@
     text-align: center;
     font-family: Merriweather;
     font-size: 32px;
-    font-weight: 400px;
     top: 140px;
     left: 480px;
 }
@@ -29,20 +34,16 @@
     text-align: center;
     font-family: Merriweather;
     font-size: 72px;
-    font-weight: 600px;
     top: 150px;
     left: 370px;
 }
 
-/* Section 02 Style */
-}
+                                         /* Section 02 Style */
 
 .item {
     display: grid;
-    justify-content: end;
     align-items: center;
     text-align: center;
-    position: absolute;
     top: 130px;
     left: 230px;
 
@@ -50,34 +51,32 @@
 
 .item-01 {
     color: #F00;
-
     font-family: Inter;
     font-size: 50px;
-    font-style: normal;
     font-weight: 700;
 }
 
 .item-02 {
     color: #F00;
-
     font-family: Inter;
     font-size: 20px;
-
     font-weight: 500;
 
 }
 
 .item-03 {
     color: #070211;
-
     font-family: Inter;
-    font-size: 40px;
-
+    font-size: 40px; 
     font-weight: 700;
     margin-top: 4px;
 
 }
-
+.item-04 {
+    width: 802.9px;
+    height: 500px;
+    margin-left:300px;
+}
 .item img {
     width: 802.9px;
     height: 500px;
@@ -96,33 +95,22 @@
 }
 
 .item-a h2 {
-
-
     font-family: Merriweather;
     font-size: 64px;
-    font-style: normal;
     font-weight: 600px;
-    line-height: 88px;
     letter-spacing: 2px;
 }
 
 .item-a p {
-
-
     font-family: Inter;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 30px;
 }
 
 .item-a h4 {
-
     font-family: Inter;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     text-transform: uppercase;
 }
 
@@ -249,109 +237,173 @@
 }
 
 
-/* Footer Section Style */
-footer {
-    position: relative;
-    background-color: #070211;
-    width:100%;
-    height:500px;
-    color: #FFF;
-    font-family: Inter;
-    font-size: 20px;
-    font-weight:150px;
-    line-height: 20px;
-    
-}
-.f-01{
-    position: absolute;
-    padding-left: 50px;
-    padding-top: 40px;
-}
-.f-02 {
-    position: absolute;
-    padding-left:1200px;
-    padding-top:40px;
-}
-.f-03 {
-    position: absolute;
-    padding-left: 1170px;
-    padding-top:60px;
-}
-.f-04 {
-    position: absolute;
-    padding-top: 400px;
-    padding-left:550px;
-}
-.horizontal-line {
-    position: absolute;
-    width: 1320px;
-height: 1px;
-color: #FFFFFF26;
-margin-top: 200px;
-margin-left:50px;
-}
-.social-link {
-    position: absolute;
-    margin-left: 550px;
-    margin-top: 220px;
-}
 
-/* Section Style  */
-.section-08 {
-    display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-.subscribe{
+                                        /* Section-07 Style */
+.section-07 {
+    width: 1200px;
+    height: 500px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.section-07 h4 {
+    color: #F00;
+
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.section-07 h3 {
     color: #070211;
-text-align: center;
+
 font-family: Merriweather;
 font-size: 48px;
 font-weight: 900;
 text-transform: capitalize;
 }
+.section-07 p {
+    color: rgba(7, 2, 17, 0.60);
+
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+}
+.i-box {
+    width: 424px;
+height: 450px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:10px;
+}
+   
+
+
+
+
+
+
+
+
+
+                                      /* Section-08 Style  */
+.section-08 {
+    width: 1320px;
+    height: 616px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.subscribe {
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
 .s-p {
     color: rgba(7, 2, 17, 0.60);
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-weight: 400;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
 }
+
 .s-image {
     width: 150px;
-height: 150px;
+    height: 150px;
 }
+
 .input {
     width: 648px;
-height: 72px;
-border-radius: 50px;
-background: #FFF;
-.email {
-    color: rgba(7, 2, 17, 0.30);
+    height: 72px;
+    border-radius: 50px;
+    background: #FFF;
 
-text-align: center;
-font-family: Inter;
-font-size: 18px;
-font-weight: 400;
-width: 300px;
-height: 50px;
-border-radius: 10px;
-border: none;
+    .email {
+        color: rgba(7, 2, 17, 0.30);
+
+        text-align: center;
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        width: 300px;
+        height: 50px;
+        border-radius: 10px;
+        border: none;
+
+    }
+
+    .i-b {
+        color: #FFF;
+
+        text-align: center;
+        font-family: Inter;
+        font-size: 20px;
+        font-weight: 600;
+        text-transform: capitalize;
+        width: 200px;
+        height: 50px;
+        border-radius: 0px 50px 50px 0px;
+        background: #F00;
+        border: none;
+    }
+
+                                      /* Footer Section Style */
+footer {
+    position: relative;
+    background-color: #070211;
+    width: 100%;
+    height: 500px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 150px;
+    line-height: 20px;
 
 }
-.i-b {
-    color: #FFF;
 
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-weight: 600;
-text-transform: capitalize;
-    width:200px;
-height:50px;
-border-radius: 0px 50px 50px 0px;
-background: #F00;
-border: none;
+.f-01 {
+    position: absolute;
+    padding-left: 50px;
+    padding-top: 40px;
+}
+
+.f-02 {
+    position: absolute;
+    padding-left: 1200px;
+    padding-top: 40px;
+}
+
+.f-03 {
+    position: absolute;
+    padding-left: 1170px;
+    padding-top: 60px;
+}
+
+.f-04 {
+    position: absolute;
+    padding-top: 400px;
+    padding-left: 550px;
+}
+
+.horizontal-line {
+    position: absolute;
+    width: 1320px;
+    height: 1px;
+    color: #FFFFFF26;
+    margin-top: 200px;
+    margin-left: 50px;
+}
+
+.social-link {
+    position: absolute;
+    margin-left: 550px;
+    margin-top: 220px;
 }
